<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/whole_message"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/background_message"
    android:layout_margin="5dp"
    android:padding="5dp">

    <TextView
        android:id="@+id/user"
        android:layout_margin="2dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/message_color"
        android:text="@string/example_Name"
        android:textSize="15sp"/>

    <TextView
        android:id="@+id/message"
        android:layout_margin="2dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/message_color"
        android:textSize="17sp"
        android:text="@string/example_message_Text"/>

    <TextView
        android:id="@+id/date"
        android:layout_margin="2dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="11sp"
        android:textColor="@color/message_color"
        android:gravity="end"
        android:text="@string/example_Date"/>

</LinearLayout>